# picowalker-core

./: .gitignore  CMakeLists.txt  README.md  toolchain-pico.cmake
docs/: DESIGN.md  TODO.md
src/: accel.c  accel.h  eeprom.c  eeprom.h  eeprom_map.h  globals.c  globals.h  menu.c  menu.h  picowalker.c  screen.c  screen.h  states.c  states.h  types.h  utils.c  utils.h
src/apps/: app_battle.c  app_battle.h  app_comms.c  app_comms.h  app_dowsing.c  app_dowsing.h  app_first_comms.c  app_first_comms.h  app_inventory.c  app_inventory.h  app_poke_radar.c  app_poke_radar.h  app_settings.c  app_settings.h  app_splash.c  app_splash.h  app_trainer_card.c  app_trainer_card.h
src/ir/: actions.c  actions.h
