cmake_minimum_required(VERSION 3.12)
project(picowalker-core)

add_library(picowalker-core
    src/picowalker.c
    src/picowalker.h
    src/buttons.c
    src/buttons.h
    src/states.c
    src/states.h
    src/menu.c
    src/menu.h
    src/screen.c
    src/screen.h
    src/globals.c
    src/globals.h
    src/types.h
    src/pico_roms.h
    src/utils.c
    src/utils.h
    src/eeprom.c
    src/eeprom.h
    src/rand.c
    src/rand.h
    src/flash.h
    src/ir/compression.c
    src/ir/compression.h
    src/ir/ir.c
    src/ir/ir.h
    src/ir/actions.c
    src/ir/actions.h
    src/apps/app_splash.c
    src/apps/app_splash.h
    src/apps/app_trainer_card.c
    src/apps/app_trainer_card.h
    src/apps/app_inventory.c
    src/apps/app_inventory.h
    src/apps/app_dowsing.c
    src/apps/app_dowsing.h
    src/apps/app_poke_radar.c
    src/apps/app_poke_radar.h
    src/apps/app_battle.c
    src/apps/app_battle.h
    src/apps/app_comms.c
    src/apps/app_comms.h
    src/apps/app_first_comms.c
    src/apps/app_first_comms.h
)


